Update build_tomcat.sh